syntax = "proto3";

package installs.v1;

import "tagger/tagger.proto";
import "validate/validate.proto";

// ProvisionSandboxRequest represents a workflow input for creating a deployment
message ProvisionRequest {
  string org_id = 1 [
    (validate.rules).string.uuid = true,
    (tagger.tags) = "faker:\"uuid_hyphenated\""
  ];
  string app_id = 2 [
    (validate.rules).string.uuid = true,
    (tagger.tags) = "faker:\"uuid_hyphenated\""
  ];
  string install_id = 3 [
    (validate.rules).string.uuid = true,
    (tagger.tags) = "faker:\"uuid_hyphenated\""
  ];

  AccountSettings account_settings = 4;
  SandboxSettings sandbox_settings = 5;
}

message AccountSettings {
  string region = 1 [
    (validate.rules).string = {
      in: [
        "us-west-2",
        "us-west-1",
        "us-east-2",
        "us-east-1"
      ]
    },
    (tagger.tags) = "faker:\"oneof: us-west-2\""
  ];

  string aws_account_id = 2 [
    (validate.rules).string.min_len = 12,
    (tagger.tags) = "faker:\"len=12\""
  ];

  string aws_role_arn = 3 [
    (validate.rules).string.min_len = 20,
    (tagger.tags) = "faker:\"len=20\""
  ];
}

message SandboxSettings {
  string name = 1 [
    (validate.rules).string.min_len = 1,
    (tagger.tags) = "faker:\"len=5\""
  ];

  string version = 2 [
    (validate.rules).string.min_len = 1,
    (tagger.tags) = "faker:\"len=5\""
  ];
}

// StartResponse returns the response from a deployment workflow
message ProvisionResponse {
  map<string, string> terraform_outputs = 1;
}
